updated profile abd added scope in

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,9 @@ jason:
  last_name: "liu"
  email: "liu33173847@hotmail.com"
  profile_name: "timliu"
+
+malina:
+ first_name: "malina"
+ last_name: "zhang"
+ email: "mangnv@gmail.com"
+ profile_name: "mangnv"
