--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,9 @@ malina:
  last_name: "zhang"
  email: "mangnv@gmail.com"
  profile_name: "mangnv"
+
+mike:
+ first_name: "Mike"
+ last_name: "THE Frog"
+ email: "mike@gmail.com"
+ profile_name: "mikethefrog"
